# websocket

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: client.cpp  client.h  client_tests.cpp
test_server/: index.js  package-lock.json  package.json
utilities/: base64.cpp  base64.h  base64_tests.cpp
